2016-12-17 belangeo <belangeo@gmail.com>

    * Upgraded version number to 0.8.2.

2016-12-17 belangeo <belangeo@gmail.com>

    * Fixed bug in Bendin value. Fixed midi input events handling. Set 
      interpolation to off by default for midi continuous controllers.

2016-12-17 belangeo <belangeo@gmail.com>

    * E-Pyo: Fixed a bug in the documentation window.

2016-12-17 belangeo <belangeo@gmail.com>

    * TrigFunc and Pattern now accept tuple as arg argument (fixed issue #90).

2016-12-15 belangeo <belangeo@gmail.com>

    * Fixed portaudio suggested latency for realtime performance.

2016-12-08 belangeo <belangeo@gmail.com>

    * Upgraded version number to 0.8.1.

2016-12-08 belangeo <belangeo@gmail.com>

    * Iter now accepts PyoObjects in its list of values.

2016-12-08 belangeo <belangeo@gmail.com>

    * Iter now sends a thrigger when it reaches the last value.

2016-11-25 belangeo <belangeo@gmail.com>

    * SigTo ramp time now can be controlled at audio rate (issue #87).

2016-11-23 belangeo <belangeo@gmail.com>

    * Added __iter__(), __next__() and next() (python 2 compatibility) methods 
      to PyoBaseObject.

2016-11-22 belangeo <belangeo@gmail.com>

    * Added reset method to various objects (AllpassWG, Chorus, Freeverb, 
      Harmonizer, STRev, WGVerb, Waveguide).

2016-11-16 belangeo <belangeo@gmail.com>

    * TableWrite now takes into account the feedback argument of NewTable 
      object and interpolates to fill in gaps if position moves faster than 
      the sampling rate.

2016-11-07 belangeo <belangeo@gmail.com>

    * Added missing methods to Notein object and ctrl() method in midi.py. 

2016-11-07 belangeo <belangeo@gmail.com>

    * Added a `callback` argument to PyoObject.set() method. 

2016-11-06 Aron Granberg <http://arongranberg.com>

    * Python 3 migration. Still need to port pyo's GUI written with WxPython
      to WxPython Phoenix (the port of WxPython Classic to python 3). Some
      widgets are broken.  
