@@ -2203,6 +2203,7 @@ init_pyo64(void)
     module_add_object(m, "Expr_base", &ExprType);
     module_add_object(m, "PadSynthTable_base", &PadSynthTableType);
     module_add_object(m, "LogiMap_base", &LogiMapType);
+    module_add_object(m, "SharedTable_base", &SharedTableType);
 
     PyModule_AddStringConstant(m, "PYO_VERSION", PYO_VERSION);
 #ifdef COMPILE_EXTERNALS
